tests/suite/pass/generated/types/pass_sub_i32_1_1.ny
fn main() {
    let x = 1
    let y = 1
    let _ = x - y
}
