tests/suite/fail/generated/stderr_full/stderr_string_sub.ny
fn main() {
    let _ = "a" - 1
}
